--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Author: Borivoje Stojiljkovic">
+  <meta title="MyApp">
   <title>MyApp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="preload stylesheet">
+  <link  rel="preload" as="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
